<?xml version="1.0"?>
<package>
  <name>vision_tasks</name>
  <version>1.0.0</version>
  <description>The vision_tasks package</description>

  <maintainer email="etienne@todo.todo">etienne</maintainer>


  <license>BSD 3-Clause license</license>

  

<buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>anahita_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>master_layer</run_depend>
  <build_depend>master_layer</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>anahita_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
  
</package>
